--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
       <header class="row mb-4">
         <div class="col-8">
           <h1 class="fw-bold text-primary mb-2">QUOTATION</h1>
-          <p class="mb-1"><strong>Dilshan Weragoda</strong></p>
-          <p class="mb-1">487/B, Gonawala, Kelaniya</p>
+          <p class="mb-1"><strong>Dilshan Weragoda Graphics</strong></p>
+          <p class="mb-1">587/G, Munneshwarm, Sri Lanka</p>
           <p class="mb-0">Email: <a href="mailto:dpasindu487@gmail.com">dpasindu487@gmail.com</a> | Phone: (081) 123 4567</p>
         </div>
         <div class="col-4">
           <table class="table table-bordered table-sm">
             <tbody>
+              <tr>
+                <th>Quote Number</th>
+                <td id="quoteNumber" class="text-end"></td>
+              </tr>
               <tr>
                 <th>Date</th>
                 <td id="date" class="text-end"></td>
@@ -33,6 +37,68 @@
           </table>
         </div>
       </header>
+
+      <!-- Customer Details Section -->
+      <div class="mb-4">
+        <div class="bg-primary text-white p-2 rounded-top">
+          <h5 class="mb-0">Bill To:</h5>
+        </div>
+        <div class="border border-top-0 p-3 rounded-bottom">
+          <div class="row mb-3">
+            <div class="col-12">
+              <label for="customerName" class="form-label">Customer Name</label>
+              <input type="text" class="form-control" id="customerName" placeholder="Enter customer name">
+            </div>
+          </div>
+          <div class="row mb-3">
+            <div class="col-12">
+              <label for="customerAddress" class="form-label">Customer Address</label>
+              <textarea class="form-control" id="customerAddress" rows="2" placeholder="Enter customer address"></textarea>
+            </div>
+          </div>
+          <div class="row mb-3">
+            <div class="col-md-6">
+              <label for="customerEmail" class="form-label">Email</label>
+              <input type="email" class="form-control" id="customerEmail" placeholder="Enter email">
+            </div>
+            <div class="col-md-6">
+              <label for="customerPhone" class="form-label">Phone</label>
+              <input type="tel" class="form-control" id="customerPhone" placeholder="Enter phone number">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Quotation Details Section -->
+      <div class="mb-4">
+        <div class="bg-success text-white p-2 rounded-top">
+          <h5 class="mb-0">Quotation Details:</h5>
+        </div>
+        <div class="border border-top-0 p-3 rounded-bottom">
+          <div class="row mb-3">
+            <div class="col-md-6">
+              <label for="validUntil" class="form-label">Valid Until:</label>
+              <input type="date" class="form-control" id="validUntil">
+            </div>
+            <div class="col-md-6">
+              <label for="projectName" class="form-label">Project Name:</label>
+              <input type="text" class="form-control" id="projectName" placeholder="Project/Service Name">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <label for="paymentTerms" class="form-label">Payment Terms:</label>
+              <select class="form-select" id="paymentTerms">
+                <option value="Due on Receipt">Due on Receipt</option>
+                <option value="Net 15">Net 15</option>
+                <option value="Net 30">Net 30</option>
+                <option value="50% Advance">50% Advance</option>
+                <option value="Custom">Custom</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="table-responsive">
         <table class="table table-bordered" id="quotationTable">
@@ -52,7 +118,6 @@
       <div class="text-start">
           <button class="btn btn-primary mb-3" id="addItem">+ Add Item</button>
       </div>
-
 
       <div class="row justify-content-end">
         <div class="col-md-6">
@@ -126,7 +191,10 @@
     </div>
 
     <div class="text-center mt-4 button-container">
-      <button class="btn btn-secondary" id="printBtn">Print Quotation</button>
+      <button class="btn btn-secondary me-2" id="printBtn">Print Quotation</button>
+      <button class="btn btn-success me-2" id="saveBtn">Save Quotation</button>
+      <button class="btn btn-warning me-2" id="loadBtn">Load Quotation</button>
+      <button class="btn btn-info" id="newBtn">New Quotation</button>
     </div>
   </div>
 
